--- a/argocd/istio-1.28.2/peer-auth-nginx-dev.yaml
+++ b/argocd/istio-1.28.2/peer-auth-nginx-dev.yaml
@@ -2,7 +2,8 @@ apiVersion: security.istio.io/v1beta1
 kind: PeerAuthentication
 metadata:
   name: default
-  namespace: nginx-app
+  namespace: nginx-dev
 spec:
   mtls:
     mode: STRICT
+ 
